// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-axe readme first readme example should demonstrate this matcher\`s usage 1`] = `
"expect(received).toHaveNoViolations(expected)

Expected the HTML found at $('img') to have no violations:

<img src=\\"#\\">

Received:

\\"Images must have alternate text (image-alt)\\"

Fix any of the following:
  Element does not have an alt attribute
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute
  Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.2/image-alt?application=axeAPI

────────

Expected the HTML found at $('img') to have no violations:

<img src=\\"#\\">

Received:

\\"All page content should be contained by landmarks (region)\\"

Fix any of the following:
  Some page content is not contained by landmarks

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.2/region?application=axeAPI"
`;

exports[`jest-axe toHaveNoViolations returns correctly formatted message when violations are present 1`] = `
"expect(received).toHaveNoViolations(expected)

Expected the HTML found at $('body > img') to have no violations:

<img src=\\"\\">

Received:

\\"Images must have alternate text (image-alt)\\"

Fix any of the following:
  Element does not have an alt attribute
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty or not visible
  Element has no title attribute or the title attribute is empty
  Element's default semantics were not overridden with role=\\"presentation\\"
  Element's default semantics were not overridden with role=\\"none\\"

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/2.6/image-alt?application=axeAPI"
`;

exports[`jest-axe toHaveNoViolations returns properly formatted text with more complex example 1`] = `
"expect(received).toHaveNoViolations(expected)

Expected the HTML found at $('img[src$=\\"example\\\\.com\\"]') to have no violations:

<img src=\\"http://example.com\\">

Received:

\\"Images must have alternate text (image-alt)\\"

Fix any of the following:
  Element does not have an alt attribute
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute
  Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.2/image-alt?application=axeAPI

Expected the HTML found at $('img[src=\\"http\\\\:\\\\/\\\\/example\\\\.com\\\\/2\\"]') to have no violations:

<img src=\\"http://example.com/2\\">

Received:

\\"Images must have alternate text (image-alt)\\"

Fix any of the following:
  Element does not have an alt attribute
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute
  Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.2/image-alt?application=axeAPI

────────

Expected the HTML found at $('input') to have no violations:

<input type=\\"text\\">

Received:

\\"Form elements must have labels (label)\\"

Fix any of the following:
  Form element does not have an implicit (wrapped) <label>
  Form element does not have an explicit <label>
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute
  Element has no placeholder attribute
  Element's default semantics were not overridden with role=\\"none\\" or role=\\"presentation\\"

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.2/label?application=axeAPI

────────

Expected the HTML found at $('a[href$=\\"\\\\#link-name\\"]') to have no violations:

<a href=\\"#link-name\\"></a>

Received:

\\"Links must have discernible text (link-name)\\"

Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.2/link-name?application=axeAPI

Expected the HTML found at $('a[href$=\\"\\\\#link-name-2\\"]') to have no violations:

<a href=\\"#link-name-2\\"></a>

Received:

\\"Links must have discernible text (link-name)\\"

Fix all of the following:
  Element is in tab order and does not have accessible text

Fix any of the following:
  Element does not have text that is visible to screen readers
  aria-label attribute does not exist or is empty
  aria-labelledby attribute does not exist, references elements that do not exist or references elements that are empty
  Element has no title attribute

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.2/link-name?application=axeAPI

────────

Expected the HTML found at $('img[src$=\\"example\\\\.com\\"]') to have no violations:

<img src=\\"http://example.com\\">

Received:

\\"All page content should be contained by landmarks (region)\\"

Fix any of the following:
  Some page content is not contained by landmarks

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.2/region?application=axeAPI

Expected the HTML found at $('img[src=\\"http\\\\:\\\\/\\\\/example\\\\.com\\\\/2\\"]') to have no violations:

<img src=\\"http://example.com/2\\">

Received:

\\"All page content should be contained by landmarks (region)\\"

Fix any of the following:
  Some page content is not contained by landmarks

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.2/region?application=axeAPI

Expected the HTML found at $('input') to have no violations:

<input type=\\"text\\">

Received:

\\"All page content should be contained by landmarks (region)\\"

Fix any of the following:
  Some page content is not contained by landmarks

You can find more information on this issue here: 
https://dequeuniversity.com/rules/axe/4.2/region?application=axeAPI"
`;
